<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgMovie"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_plus"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_alignParentBottom="true" />
            <TextView
                android:id="@+id/txtTitle"
                android:layout_toRightOf="@id/imgMovie"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/strTitle"
                android:textStyle="bold|italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_margin"
                android:layout_marginRight="@dimen/space_margin"/>

            <LinearLayout
                android:id="@+id/linearReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@id/imgMovie"
                android:layout_marginTop="@dimen/space_margin"
                android:layout_below="@id/txtTitle"
                android:layout_alignLeft="@id/txtTitle">
                <ImageView
                    android:id="@+id/imgCalendar"
                    android:layout_width="wrap_content"
                    android:src="@mipmap/calendar"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/txtYear"
                    android:textAlignment="center"
                    android:text="@string/strYear"
                    android:layout_marginLeft="@dimen/space_controls_margin"
                    android:textStyle="bold|italic"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/txtGenre"
                android:textStyle="bold|italic"
                android:layout_below="@id/txtTitle"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/space_margin"
                android:text="@string/strGenre"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txtDesc"
                android:layout_below="@id/linearReleaseDate"
                android:layout_toRightOf="@id/imgMovie"
                android:layout_centerInParent="true"
                android:text="@string/strDesc"
                android:maxLines="5"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_margin"
                />
            <LinearLayout
                android:id="@+id/linearRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/txtDesc"
                android:layout_toRightOf="@id/imgMovie"
                android:layout_marginTop="@dimen/space_margin"
                android:layout_alignLeft="@id/txtTitle">
                    <ImageView
                        android:id="@+id/imgRatingStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/rating"
                        android:layout_weight="1"
                        android:scaleType="fitXY"/>
                    <TextView
                    android:id="@+id/txtRating"
                    android:text="@string/strRating"
                    android:textStyle="bold|italic"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/space_controls_margin"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

